Adds a bower file for install angular and tidies up a little bit

--- a/controllers2_done.html
+++ b/controllers2_done.html
@@ -1,8 +1,8 @@
 <!document html>
 <html ng-app="customersApp">
   <head>
-    <script type='text/javascript' src='js/angular.js'></script>
-    <script type='text/javascript' src='js/angular-route.js'></script>
+    <script type='text/javascript' src='bower_components/angular/angular.js'></script>
+    <script type='text/javascript' src='bower_components/angular-route/angular-route.js'></script>
     <script type='text/javascript' src='app/app_done.js'></script>
     <script type='text/javascript' src='app/controllers/customersController2_done.js'></script>
   </head>
