--- a/controllers1_done.html
+++ b/controllers1_done.html
@@ -1,7 +1,7 @@
 <!document html>
 <html ng-app>
   <head>
-    <script type='text/javascript' src='js/angular.js'></script>
+    <script type='text/javascript' src='bower_components/angular/angular.js'></script>
     <!-- 2. Move code into a Controller. -->
     <script type='text/javascript' src='app/controllers/customersController1_done.js'></script>
   </head>
